--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   qr_flutter: ^4.1.0
+  flutter_launcher_icons: ^0.13.1
+  rename_app: ^1.6.1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: 'assets/icons/wave_launcher_icon.png'
+  min_sdk_android: 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
