--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/images/icons/home/Building.png
     - assets/images/icons/home/Phone.png
     - assets/images/icons/home/Gift.png
+    - assets/images/icons/settings/blink.png
 
     - assets/data/transactions.json
 
