--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_launcher_icons: ^0.13.1
   rename_app: ^1.6.1
+  loader_overlay: ^4.0.1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
