--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   rename_app: ^1.6.1
   loader_overlay: ^4.0.1
   flutter_spinkit: ^5.2.1
+  local_session_timeout: ^3.1.0
 
 dev_dependencies:
   flutter_test:
