--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   local_session_timeout: ^3.1.0
   flutter_native_splash: ^2.4.1
+  mobile_scanner: ^5.1.1
 
 dev_dependencies:
   flutter_test:
