--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   local_session_timeout: ^3.1.0
   flutter_native_splash: ^2.4.1
   mobile_scanner: ^5.1.1
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -104,6 +105,8 @@ flutter:
     - assets/images/wave-4x.jpg
 
     - assets/data/transactions.json
+
+    - assets/sounds/beep.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
