--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   mobile_scanner: ^5.1.1
   audioplayers: ^6.0.0
   flutter_contacts: ^1.1.8
+  shared_preferences: ^2.3.1
 
 dev_dependencies:
   flutter_test:
