handle new transactions store

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   audioplayers: ^6.0.0
   flutter_contacts: ^1.1.8
   shared_preferences: ^2.3.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
